--- a/hello-world/.goreleaser.yml
+++ b/hello-world/.goreleaser.yml
@@ -13,7 +13,7 @@ archive:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .ShortCommit }}-{{ .Tag }}-next"
+  name_template: "{{ .ShortCommit }}-{{ .Tag }}"
 changelog:
   sort: asc
   filters:
