--- a/hello-world/.goreleaser.yml
+++ b/hello-world/.goreleaser.yml
@@ -20,6 +20,7 @@ archive:
     windows: Windows
     386: i386
     amd64: x86_64
+    freebsd: FreeBSD
   format_overrides:
     - goos: windows
       format: zip
